--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты</title>
-    <link rel="stylesheet" href="../style/styles.css"> <!-- Подключение стилей -->
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
+        <header class="header">
+            <h1>Хэдер</h1> 
+        </header>
+
+        <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="../pages/news.html">Новости</a></li>
@@ -17,16 +20,20 @@
                 <li class="nav-item"><a class="nav-link" href="../pages/goods.html">Товары</a></li>
                 <li class="nav-item"><a class="nav-link" href="../pages/contacts.html">Контакты</a></li>
             </ul>
-        </div>
+        </nav>
+
         <main class="content">
-            <div class="contact-info">
+            <article class="contact-info">
                 <h2 class="contact-title">Контактная информация</h2>
                 <p class="contact-email">Электронная почта: aleksey.zorin8@nemail.ru</p>
                 <p class="contact-address">Адрес: Япония, ул. Шибуя, д. 11</p>
                 <button class="contact-button">Позвоните мне</button>
-            </div>
+            </article>
         </main>
-        <div class="footer">Футер</div>
+
+        <footer class="footer">
+            <p>Футер</p>
+        </footer>
     </div>
 </body>
 </html>
