--- a/pages/goods.html
+++ b/pages/goods.html
@@ -44,7 +44,7 @@
         </main>
 
         <footer class="footer">
-            <p>Футер</p> 
+            <p>Человек года 2006. Все права защищены.</p> 
         </footer>
     </div>
 </body>
