--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </main>
             
             <footer class="footer">
-                <p>Футер</p>
+                <p>Человек года 2006. Все права защищены.</p>
             </footer>
         </div>
     </body>
