--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="header__content">
                     <h1 class="header__title">Зорин Алексей</h1>
-                    <p class="header__subtitle">Студент-разработчик</p>
+                    <p class="header__subtitle">Студент и разработчик</p>
                 </div>
             </div>
         </header>
